tests/should_fail/bug/603.stderr
error[E0277]: the trait bound `S: creusot_std::prelude::IteratorSpec` is not satisfied
 --> 603.rs:7:5
  |
7 |     fn next(&mut self) -> Option<()> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `creusot_std::prelude::IteratorSpec` is not implemented for `S`
 --> 603.rs:3:1
  |
3 | pub struct S();
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `creusot_std::prelude::IteratorSpec`:
            &mut I
            creusot_std::logic::fmap::FMapIter<K, V>
            creusot_std::logic::fmap::FMapIterRef<'a, K, V>
            creusot_std::logic::seq::SeqIter<T>
            creusot_std::logic::seq::SeqIterRef<'a, T>
            creusot_std::std::iter::MapInv<I, F>
            std::array::IntoIter<T, N>
            std::collections::hash_map::IntoIter<K, V>
          and 29 others

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
